--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
+@import url('https://api.fontshare.com/v2/css?f[]=satoshi@1&display=swap');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
+
+* {
+  font-family: 'satoshi', sans-serif;
+}
+
 body {
   @apply bg-black;
+
 }
 
 
