--- a/src/Pages/Pricing/pricing.css
+++ b/src/Pages/Pricing/pricing.css
@@ -122,3 +122,19 @@ input[type="range"]::-moz-range-thumb::after {
   /* Position the image at the center */
   object-position: top;
 }
+
+.ribbon-container {
+  /* Hide overflowing parts of the ribbon */
+  overflow: hidden;
+}
+
+.image-container img {
+  width: 100%;
+  height: 100%;
+  /* Cover the entire container without stretching */
+  object-fit: cover;
+  /* Position the image at the center */
+  object-position: right;
+}
+
+
